<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            app:constraint_referenced_ids="btn_anonymous_sign_in_demo,btn_email_sign_in_demo,btn_phone_sign_in_demo,btn_google_sign_in_demo"
            app:flow_maxElementsWrap="1"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_anonymous_sign_in_demo"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_anonymous_sign_in_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_email_sign_in_demo"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_email_sign_in_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_phone_sign_in_demo"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_phone_sign_in_demo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google_sign_in_demo"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:text="@string/btn_google_sign_in_demo" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_auth_callback_mode"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:paddingHorizontal="@dimen/small"
            app:layout_constraintTop_toBottomOf="@+id/flow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/cb_auth_callback_mode" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
